crates/ui-macros/tests/compile-fail/unknown_ident.rs
use poly_ui_macros::connected;

#[connected(banana)]
fn SomeRoute() {}
